# v-search

./: .gitignore  Makefile  README.md  pyproject.toml
apps/api/: README.md  main.py  pyproject.toml
apps/index/: README.md
apps/spider/: db.py  main.py  pyproject.toml  utils.py
apps/www/: README.md  astro.config.mjs  package.json
apps/www/public/: quickly.js
apps/www/src/components/: Logo.astro  ThemeHead.astro
apps/www/src/pages/: index.astro  results.astro  search.astro
apps/www/src/scripts/: quickly.js
apps/www/src/styles/: global.css
