[project]
name = "quickly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/index",
  "apps/spider",
  "packages/tkz",
  "packages/db",
]

[project.scripts]
app = "apps.api.main:app"

